[metadata]
name = logol
summary = logol
description-file =
    README.md
author = Olivier Sallou
author-email = olivier.sallou@irisa.fr
home-page = https://github.com/osallou/logol-playground
classifier =
    Environment :: Logol
    Intended Audience :: Information Technology
    Intended Audience :: Users
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
